<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/comp_item_typ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvCompType"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:textColor="#ffffbb33" />

    <TextView
        android:text="@string/comp_item_ran"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvCompRange"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:textColor="#ffffbb33" />

    <TextView
        android:text="@string/comp_item_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvCompYears"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:textColor="#ffffbb33" />
</LinearLayout>